0.2.0		UNRELEASED

 FEATURES

  * Add progress bar in manifest converter. (Jelmer Vernooij)

  * Support "bzr upgrade" in Mercurial working trees. (Jelmer Vernooij)

  * Support 'bzr send --format=hg' to send hg bundles. (Jelmer Vernooij)

  * Convert 'rebase_source' extra into 'rebase-of' revision property. 
    (Jelmer Vernooij)

  * Convert 'convert_revision' extra into 'converted-from' revision property.
    (Jelmer Vernooij)

  * Set 'converted-from' revision on newly converted revisions.
    (Jelmer Vernooij)

  * New revision specified 'hg:'. (Jelmer Vernooij)

 BUG FIXES

  * Mark as compatible with Bazaar 2.1. (Jelmer Vernooij)

  * Check for Mercurial version before attempting to import it.
    (#432100, Jelmer Vernooij)

  * Deal with spaces in paths. (Jelmer Vernooij)

  * Remove empty directories during fetch. (Jelmer Vernooij)

  * Mark Mercurial 1.4 as supported. (#486899, Jelmer Vernooij)

  * Don't warn about development versions of Mercurial. (#492292, Jelmer 
    Vernooij)

0.1.0		2009-09-24

 Initial release.